Increased padding to ensure focus rings are not cropped

--- a/webprotege-client/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtege.css
+++ b/webprotege-client/src/main/java/edu/stanford/bmir/protege/web/resources/WebProtege.css
@@ -479,6 +479,7 @@
 }
 
 .wp-form__grid__cell {
+    padding: 1px;
 }
 
 .wp-form__grid__header-row {
